# sidplay2-libs

branches/post-0-4-sparc-test/libsidplay/: AUTHORS  Makefile.am  Makefile.dist  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs  sidconfig.h.in
branches/post-0-4-sparc-test/libsidplay/src/: Makefile.am  Makefile.in  sidplayer.cpp  sidplayer_pr.h
branches/post-0-4-sparc-test/libsidplay/win/: config.h  libsidplay.dsw  sidconfig.h
libsidplay/: ChangeLog  Makefile.am  Makefile.in  TODO  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in  libsidplay.kdevprj  sidendian.h  sidtypes.h
libsidplay/doc/: Makefile.am  Makefile.in  sidplay2.1
libsidplay/doc/en/: Makefile.am  Makefile.in  sidplay2.1
libsidplay/include/: Makefile.am  Makefile.in  config.h  config.h.in  sidendian.h  sidenv.h  sidplay2.h
libsidplay/include/sidplay/: Buffer.h  Makefile.am  Makefile.in  SidTune.h  c64env.h  component.h  event.h  ifptr.h  iinterface.h  sid2types.h  sidbuilder.h  sidconfig.h  sidconfig.h.in  sidendian.h  sidiptr.h  sidiunknown.h  sidlazyiptr.h  sidplay2.h  sidtypes.h  sidusage.h
libsidplay/include/sidplay/imp/: Makefile.am  component.h  iinterface.h  sidbuilder.h  sidcobuilder.h  sidcounknown.h
libsidplay/src/: Makefile.am  Makefile.in  c64env.h  config.cpp  event.cpp  fake6526.cpp  fake6526.h  keyboard.cpp  keyboard.h  main.cpp  mixer.cpp  nullsid.h  player.cpp  player.h  psiddrv.a65  psiddrv.cpp  reloc65.c  sidmixer.cpp  sidplay2.cpp  sidplayer.cpp  sidplayer.h  sidplayer_pr.h
libsidplay/src/c64/: Makefile.am  Makefile.in  c64cia.h  c64sid.h  c64vic.h  c64xsid.h
libsidplay/src/mos6510/: Makefile.am  Makefile.in  conf6510.h  mos6510.cpp  mos6510.h
libsidplay/src/mos6526/: Makefile.in  mos6526.cpp  mos6526.h
libsidplay/src/mos656x/: Makefile.in  mos656x.cpp  mos656x.h
libsidplay/src/mos6581/: Makefile.in  mos6581.h
libsidplay/src/sid6526/: sid6526.cpp  sid6526.h
libsidplay/src/sidtune/: IconInfo.cpp  InfoFile.cpp  MUS.cpp  Makefile.am  Makefile.in  PP20.cpp  PP20.h  PP20_Defs.h  PSID.cpp  SidTune.cpp  SidTune.h  SidTuneTools.cpp  SidTuneTools.h  p00.cpp
libsidplay/src/xsid/: Makefile.am  Makefile.in  xsid.cpp  xsid.h
libsidplay/unix/: Makefile.am  Makefile.in  config.h.in  libsidplay2.spec  libsidplay2.spec.in  mkinstalldirs  sidconfig.h  sidconfig.h.in
libsidplay/win/: Makefile.in  config.h  libsidplay.dsp  libsidplay.mak  libsidplay.ncb  libsidplay.opt  libsidplay.plg  sidconfig.h
libsidplay/win/VC/: config.h  libsidplay.dsp  libsidplay.plg  libsidplay.vcproj  libsidplay_static.dsp  libsidplay_static.vcproj  sidconfig.h  sidplay.dsw  sidplay.ncb  sidplay.plg
libsidplay/win/VC5/: libsidplay.dsp
libsidutils/: ChangeLog  Makefile.am  Makefile.in  README  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in
libsidutils/include/: Makefile.in  config.h.in
libsidutils/include/sidplay/: Makefile.in
libsidutils/src/: Makefile.am  Makefile.in  SidDatabase.cpp  SidFilter.cpp  SidTuneMod.cpp  SidUsage.cpp  smm.cpp  smm0.h
libsidutils/src/MD5/: MD5.cpp  Makefile.in
libsidutils/src/ini/: Makefile.am  Makefile.in  headings.i  ini.cpp  ini.h  keys.i  list.h  list.i
libsidutils/unix/: Makefile.am  Makefile.in  libsidutils.pc.in  libsidutils.spec  libsidutils.spec.in
libsidutils/win/VC/: libsidutils.dsp  libsidutils.vcproj
libsidutils/win/VC5/: libsidutils.dsp
sidplay/: ChangeLog  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in
sidplay/doc/: Makefile.in
sidplay/doc/en/: Makefile.in  sidplay2.1
sidplay/include/: config.h
sidplay/src/: IniConfig.cpp  Makefile.am  Makefile.in  args.cpp  keyboard.cpp  main.cpp  menu.cpp  player.cpp  player.h
sidplay/src/audio/: AudioBase.h  AudioDrv.h  Makefile.in
sidplay/unix/: Makefile.am  Makefile.in  config.h.in  my_macros.m4  sidplay.spec.in  sidplay2.m4  sidplay2.spec  sidplay2.spec.in
sidplay/win/VC/: config.h  sidplay.dsp  sidplay.dsw  sidplay.opt  sidplay.plg
sidplay/win/VC5/: sidplay.dsp
tags/SP2W_20020915/libsidutils/: Makefile.in  acconfig.h  configure.in
tags/V2_0_6_2/libsidplay/: Makefile.am  aclocal.m4  config.h.in  configure  configure.in
tags/V2_0_7/libsidplay/: ChangeLog  README  TODO  acconfig.h  acinclude.m4  configure.in
tags/V2_8_3/hvscupdate/: Makefile.custom  SID_file_format.txt  configure.in
trunk/builders/resid-builder/: Makefile.am  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in
trunk/hvscupdate/amigaos/: configure.in  geekgadgets.txt
trunk/libsidplay/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  libsidplay.kdevprj  libsidplay.lsm  sidconfig.h.in
trunk/libsidplay/doc/: Makefile.in
trunk/libsidplay/include/: Makefile.am  Makefile.in  config.h  config.h.in  sidendian.h  sidenv.h  sidplay2.h  sidtypes.h
trunk/libsidplay/src/: Makefile.am  Makefile.in  config.cpp  event.cpp  fake6526.cpp  fake6526.h  main.cpp  mixer.cpp  nullsid.h  player.cpp  player.h  psiddrv.a65  psiddrv.cpp  sidmixer.cpp  sidplay2.cpp  sidplayer.cpp  sidplayer.h  sidplayer_pr.h
trunk/libsidplay/unix/: Makefile.am  Makefile.in  ac_create_stdint_h.m4  config.h.in  libsidplay2.pc.in  libsidplay2.spec  libsidplay2.spec.in  sidconfig.h.in
trunk/libsidplay/win/: Makefile.am  Makefile.in  config.h  libsidplay.dsp  libsidplay.ncb  libsidplay.opt  libsidplay.plg
trunk/plugins/xmms-sid2/: Makefile.in  aclocal.m4  configure.in
trunk/sidplay/: ChangeLog  Makefile.am  Makefile.in  TODO  acconfig.h  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac  configure.in
trunk/sidplay-libs/: bootstrap  configure.ac
trunk/sidplay/doc/: Makefile.in
trunk/sidplay/include/: config.h  config.h.in
trunk/sidplay/src/: IniConfig.cpp  IniConfig.h  Makefile.am  Makefile.in  args.cpp  keyboard.cpp  keyboard.h  main.cpp  menu.cpp  player.cpp  player.h
trunk/sidplay/unix/: Makefile.am  Makefile.in  config.h.in  mkinstalldirs  sidplay.spec.in  sidplay2.spec.in  typescript
(+813 files in other folders)
