dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)
AC_CONFIG_AUX_DIR(unix)
AM_CONFIG_HEADER(include/config.h)

dnl Setup library CURRENT, REVISION and AGE
LIBCUR=0
LIBREV=1
LIBAGE=0
AM_INIT_AUTOMAKE(libsidutils,1.$LIBCUR.$LIBREV)
dnl libtool-style version-info number
LIBVERSION=$LIBCUR:$LIBREV:$LIBAGE
AC_SUBST(LIBVERSION)

AC_CANONICAL_HOST

dnl Use C++ for tests.
AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl Initialize libtool.
AC_LIBTOOL_WIN32_DLL
CONFIG_LIBTOOL

dnl Checks for libraries.
SID_PATH_LIBSIDPLAY2

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN

dnl Check for nothrow allocator.
CHECK_EXCEPTIONS

dnl Add absolute directory for header files
CXXFLAGS="$CXXFLAGS -I\$(top_srcdir)/include/sidplay/utils \
\$(LIBSIDPLAY2_INCLUDES) -Wall"

AC_OUTPUT(
Makefile \
libsidutils.spec \
include/Makefile \
include/sidplay/Makefile \
include/sidplay/utils/Makefile \
src/Makefile \
src/ini/Makefile \
src/MD5/Makefile
)
