####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = sidendian.h sidenv.h sidtypes.h 

install-data-local:
	$(mkinstalldirs) /usr/local/include/sidplay2/
	$(INSTALL_DATA) sidtypes.h /usr/local/include/sidplay2/sidtypes.h

uninstall-local:
	-rm -f /usr/local/include/sidplay2/sidtypes.h

####### kdevelop will overwrite this part!!! (end)############
