####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = src include 

EXTRA_DIST = libsidplay.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO libsidplay.lsm sidconfig.h.in config.guess config.sub Makefile.dist config.status 

####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign
