dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)
AC_CONFIG_AUX_DIR(unix/scripts)
AM_CONFIG_HEADER(unix/config.h)

dnl Setup library CURRENT, REVISION and AGE
AM_INIT_AUTOMAKE(sidplay,2.0.0)

AC_CANONICAL_HOST

dnl Use C++ for tests.
AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
dnl Checks for libraries.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_BIGENDIAN

dnl Check for nothrow allocator.
CHECK_EXCEPTIONS

dnl Check whether ios::binary is ios::bin.
CHECK_IOS_BIN

dnl Checks for library functions.
AC_HEADER_STDC

dnl Checks what version of Unix we have and souncard support

AC_CHECK_HEADERS(sys/ioctl.h linux/soundcard.h machine/soundcard.h  \
  soundcard.h sys/audio.h sun/audioio.h sun/dbriio.h sys/audioio.h  \
  audio.h dmedia/audio.h)

dnl Audio Subsystem Test
AC_MSG_CHECKING(which audio subsystem is available)
audiodrv_libadd=""
case "$host" in
  *cygwin*) AC_DEFINE(HAVE_MMSYSTEM)
    audiodrv_libadd="./audio/mmsystem/libmmsystem.a"
    AC_MSG_RESULT(mmsystem)
       ;;
  *freebsd*) AC_DEFINE(HAVE_OSS)
    audiodrv_libadd="./audio/oss/liboss.a"
    AC_MSG_RESULT(oss)
       ;;
  *hpux*) AC_DEFINE(HAVE_HPUX)
    audiodrv_libadd="./audio/hpux/libhpux.a"
    AC_MSG_RESULT(hpux)
       ;;
  *irix*) AC_DEFINE(HAVE_IRIX)
    audiodrv_libadd="./audio/irix/libirix.a"
    AC_MSG_RESULT(irix)
    AC_CHECK_LIB(audio, main, [AUDIO_LIB=-laudio AC_SUBST(AUDIO_LIB)])
       ;;
  *linux*) AC_DEFINE(HAVE_OSS)
    audiodrv_libadd="./audio/oss/liboss.a"
    AC_MSG_RESULT(oss)
       ;;
  *netbsd*) AC_DEFINE(HAVE_OSS)
    audiodrv_libadd="./audio/oss/liboss.a"
    AC_MSG_RESULT(oss)
    AC_CHECK_LIB(ossaudio, main, [AUDIO_LIB=-lossaudio AC_SUBST(AUDIO_LIB)]) 
       ;;
  *qnx*) AC_DEFINE(HAVE_ALSA)
    audiodrv_libadd="./audio/alsa/libalsa.a"
    AC_MSG_RESULT(alsa)
    AC_CHECK_LIB(asound, main, [AUDIO_LIB=-lasound AC_SUBST(AUDIO_LIB)])
       ;;
  *sgi*) AC_DEFINE(HAVE_SGI)
    AC_MSG_RESULT(sgi)
       ;;
  *solaris*) AC_DEFINE(HAVE_SUNOS)
    audiodrv_libadd="./audio/sunos/libsunos.a"
    AC_MSG_RESULT(sparc)
       ;;
  *sunos*) AC_DEFINE(HAVE_SUNOS)
    audiodrv_libadd="./audio/sunos/libsunos.a"
    AC_MSG_RESULT(sparc)
       ;;
  *) AC_DEFINE(HAVE_WAV_ONLY)
    AC_MSG_RESULT(wav only)
       ;;
esac
AUDIO_DRV="$audiodrv_libadd"
AC_SUBST(AUDIO_DRV)

dnl Initialize libtool.
CONFIG_LIBTOOL


AC_OUTPUT(
Makefile \
unix/Makefile \
src/Makefile \
src/audio/Makefile \
src/audio/alsa/Makefile \
src/audio/hpux/Makefile \
src/audio/irix/Makefile \
src/audio/mmsystem/Makefile \
src/audio/null/Makefile \
src/audio/oss/Makefile \
src/audio/sunos/Makefile \
src/audio/wav/Makefile \
src/docs/Makefile \
src/docs/en/Makefile
)
