####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = src win 

EXTRA_DIST = libsidplay.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO libsidplay.lsm sidconfig.h.in sidtypes.h sidendian.h config.guess config.sub Makefile.dist 

####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign
