####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = Makefile.am sidplay2.1 

install-data-local:
	$(mkinstalldirs) /usr/local/man/man1/
	$(INSTALL_DATA) sidplay2.1 /usr/local/man/man1/sidplay2.1

uninstall-local:
	-rm -f /usr/local/man/man1/sidplay2.1

####### kdevelop will overwrite this part!!! (end)############
