
sidplayincludedir = $(includedir)/sidplay2

sidplayinclude_HEADERS = SidTune.h SidTuneCfg.h \
Buffer.h SmartPtr.h

noinst_LTLIBRARIES = libsidtune.la

libsidtune_la_SOURCES = Buffer.h \
IconInfo.cpp \
InfoFile.cpp \
MUS.cpp \
PP20.cpp \
PP20.h \
PP20_Defs.h \
PSID.cpp \
SidTune.cpp \
SidTune.h \
SidTuneCfg.h \
SidTuneTools.cpp \
SidTuneTools.h \
SmartPtr.h
