AC_INIT(src/Update.cpp)
AC_CONFIG_HEADER(src/include/config.h)
AC_CANONICAL_SYSTEM
AC_PREFIX_DEFAULT(/usr)

AC_PROG_CXX
AC_PROG_CPP
AC_LANG_CPLUSPLUS

AC_MSG_CHECKING(os type)
case "$host" in 
  *linux*) AC_DEFINE(HAVE_LINUX,1)
    AC_MSG_RESULT(Linux)
       ;;
  *freebsd*) AC_DEFINE(HAVE_UNIX,1)
    AC_MSG_RESULT(FreeBSD)
       ;;
  *netbsd*) AC_DEFINE(HAVE_UNIX,1)
    AC_MSG_RESULT(NetBSD)
       ;;
  *hpux*) AC_DEFINE(HAVE_UNIX,1)
    AC_MSG_RESULT(HP-UX)
       ;;
  *sgi*) AC_DEFINE(HAVE_UNIX,1)
    AC_MSG_RESULT(SGI)
       ;;
  *solaris*) AC_DEFINE(HAVE_UNIX,1)
    AC_MSG_RESULT(Solaris)
       ;;
  *sunos*) AC_DEFINE(HAVE_UNIX,1)
    AC_MSG_RESULT(SunOS)
       ;;
esac

AC_C_BIGENDIAN
AC_CHECK_SIZEOF(long int)

AC_MSG_CHECKING([for bool])
AC_CACHE_VAL(sid_cv_have_bool,
[
    AC_TRY_COMPILE(
        [],
        [bool aBool = true;],
        [sid_cv_have_bool=yes],
        [sid_cv_have_bool=no]
    )
])
AC_MSG_RESULT($sid_cv_have_bool)
if test "$sid_cv_have_bool" = yes; then
    AC_DEFINE(HAVE_BOOL)
fi

AC_SYS_LONG_FILE_NAMES
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_FUNCS(strcasecmp stricmp strncasecmp strnicmp mkdir rmdir strstr strtoul)
AC_CHECK_HEADERS(dirent.h fcntl.h limits.h sys/stat.h sys/types.h unistd.h)
AC_CHECK_HEADERS(strstream.h strstrea.h fstream iostream iomanip strstream sstream)

AC_MSG_CHECKING(whether standard member ios::binary is available)
AC_CACHE_VAL(sid_cv_have_ios_binary,
[
    AC_TRY_COMPILE(
        [#include <fstream.h>],
        [ifstream myTest("test",std::ios::binary);],
        [sid_cv_have_ios_binary=yes],
        [sid_cv_have_ios_binary=no]
    )
])
AC_MSG_RESULT($sid_cv_have_ios_binary)
if test "$sid_cv_have_ios_binary" = no; then
    AC_DEFINE(HAVE_IOS_BIN)
fi

# AC_CHECK_LIB(m,main,[LIBM=-lm],) dnl For FreeBSD.
# AC_SUBST(LIBM)
AC_CHECK_LIB(iostream,main,[LIBIOS=-liostream],) dnl For old systems.
AC_SUBST(LIBIOS)

AC_CHECK_PROG(MAKE,gmake,gmake,make)
if test "$MAKE" = "make"; then
  AC_CHECK_PROG(MAKE2,gnumake,gnumake,make)
  MAKE=$MAKE2
fi;
AC_SUBST(MAKE)

AC_CHECK_PROG(MAKEDEP,makedepend,makedepend,nomakedep)
if test "$MAKEDEP" = "nomakedep"; then
  AC_MSG_ERROR(No ``makedepend'' found.)
fi;
AC_SUBST(MAKEDEP)

AC_PATH_PROG(CP,cp,cp)
AC_PATH_PROG(RM,rm,rm)
AC_PROG_LN_S
AC_PROG_INSTALL

AC_OUTPUT(src/Makefile Makefile)

dnl Build dependencies.
$MAKE depend
