dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)
AC_CONFIG_AUX_DIR(unix)
AM_CONFIG_HEADER(src/config.h)

dnl Setup library CURRENT, REVISION and AGE
LIBCUR=0
LIBREV=0
LIBAGE=0
AM_INIT_AUTOMAKE(resid-builder,1.$LIBCUR.$LIBREV)
dnl libtool-style version-info number
LIBVERSION=$LIBCUR:$LIBREV:$LIBAGE
AC_SUBST(LIBVERSION)

AC_CANONICAL_HOST

dnl Use C++ for tests.
AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl Initialize libtool.
AC_DISABLE_SHARED
AC_LIBTOOL_WIN32_DLL
CONFIG_LIBTOOL

dnl
sid_prefix=$prefix
if test "$sid_prefix" = NONE; then
    sid_prefix="$ac_default_prefix"
fi

dnl Checks for libraries.
SID_PATH_LIBRESID
SID_EXTENDED_LIBRESID
SID_FIND_LIBSIDPLAY2

AC_MSG_CHECKING([sidbuilders directory])
LIBSIDPLAY2_DIR="$libdir"
if test "$LIBSIDPLAY2_DIR" = NONE; then
    LIBSIDPLAY2_DIR="$sid_prefix/lib"
fi
AC_ARG_WITH(builders,
    [  --with-builders=DIR
        where the sidbuilders are located],
    [LIBSIDPLAY2_DIR=$withval]
)
LIBSIDPLAY2_DIR="$LIBSIDPLAY2_DIR/sidplay/builders"
AC_MSG_RESULT([$LIBSIDPLAY2_DIR])
AC_SUBST(LIBSIDPLAY2_DIR)

dnl Check for nothrow allocator.
CHECK_EXCEPTIONS

dnl Add absolute directory for header files
CXXFLAGS="$CXXFLAGS \$(RESID_INCLUDES) \$(LIBSIDPLAY2_INCLUDES) -Wall"

AC_OUTPUT(
Makefile
src/Makefile
)
