dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)
AC_CONFIG_AUX_DIR(unix)
AM_CONFIG_HEADER(unix/config.h)

dnl Setup library CURRENT, REVISION and AGE
LIBCUR=0
LIBREV=0
LIBAGE=0
AM_INIT_AUTOMAKE(resid-builder,1.$LIBCUR.$LIBREV)
dnl libtool-style version-info number
LIBVERSION=$LIBCUR:$LIBREV:$LIBAGE
AC_SUBST(LIBVERSION)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl Initialize libtool.
AC_DISABLE_SHARED
AC_LIBTOOL_WIN32_DLL
CONFIG_LIBTOOL

dnl Find pkg-config
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "$PKG_CONFIG" = no; then
  AC_MSG_ERROR([*** pkg-config not found. See http://pkgconfig.sourceforge.net])
fi

if ! pkg-config --atleast-pkgconfig-version 0.5 ; then
  AC_MSG_ERROR([*** pkg-config too old; version 0.5 or better required.])
fi

dnl Use C++ for tests.
AC_LANG_CPLUSPLUS

dnl Check for nothrow allocator.
CHECK_EXCEPTIONS

dnl Checks for libraries.
SID_PATH_LIBRESID
SID_EXTENDED_LIBRESID

dnl Check for libsidplay2
LIBSIDPLAY2_REQUIRED_VERSION=2.1.0
LIBSIDPLAY2_FIND

AC_MSG_CHECKING([for sidbuilders install directory])
AC_MSG_RESULT([${libdir}])

dnl Add absolute directory for header files
CXXFLAGS="$CXXFLAGS -Wall -DHAVE_UNIX -I\$(top_srcdir)/include \
-I\$(top_srcdir)/include/sidplay/builders \
\$(RESID_CXXFLAGS) \$(LIBSIDPLAY2_CXXFLAGS)"

AC_OUTPUT(
Makefile \
include/Makefile \
include/sidplay/Makefile \
include/sidplay/builders/Makefile \
src/Makefile \
unix/Makefile \
)
